<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.darren.darren.smokewise.Looks"
    android:background="@color/motivation_bg"
    >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_weight="1">

            <Button
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:id="@+id/buttonJobProspects"
                android:text="&lt; Job Prospects"
                android:background="@drawable/roundcorner"
                android:padding="10dp"
                android:layout_margin="10dp"
                android:layout_weight="0.5"/>


            <Button
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="Others >"
                android:id="@+id/buttonOthers"
                android:background="@drawable/roundcorner"
                android:padding="10dp"
                android:layout_margin="10dp"
                android:layout_weight="0.5"/>


        </LinearLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:text="@string/looks_title"
            android:id="@+id/textViewJobTitle"
            android:layout_alignParentTop="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:textStyle="bold" />

        <ImageView
            android:paddingBottom="10dp"
            android:paddingTop="10dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/imageViewJob"
            android:layout_below="@+id/textViewJobTitle"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:src="@drawable/looks"
            android:layout_gravity="center"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:text="@string/looks_p1"
            android:id="@+id/textViewLooks1" />

        <TextView
            android:paddingBottom="10dp"
            android:paddingTop="10dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:text="@string/looks_p2"
            android:id="@+id/textViewLooks2"

            />


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:text="@string/looks_p3"
            android:id="@+id/textViewLooks3" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:text="@string/looks_p4"
            android:id="@+id/textViewLooks4" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:text="@string/looks_p5"
            android:id="@+id/textViewLooks5" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:text="@string/looks_p6"
            android:id="@+id/textViewLooks6" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:text="@string/looks_p7"
            android:id="@+id/textViewLooks7" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:text="@string/looks_p8"
            android:id="@+id/textViewLooks8" />




        <TextView

            android:paddingTop="10dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceSmall"

            android:text="http://www.tobaccofreemaine.org/quit_tobacco/#health"
            android:autoLink="web"
            android:id="@+id/looksURL" />


    </LinearLayout>

</RelativeLayout>
